--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@ Dedicated and enthusiastic BSc.CSIT student with a keen interest in mobile appli
                     
                     <p class="discription">
                         You can find projects created by me on following link. <br>
-                        <a href="https://github.com/kushalchh07">Click Me.</a>
+                        <br>
+                        
+                        Github Repository Link:.<a href="https://github.com/kushalchh07">Click Me.</a>
                     </p>
                 </div>
             </div>
